# computational-imaging

./: .gitignore  .gitmodules  CMakeLists.txt
align_image/: main.cpp
cuda_stereo/: kernel.cu
imaging/: AlignNaive.h  BlockAligner.h  HierarchicalAlignment.cpp  HierarchicalAlignment.h  RobustnessMask.h  SuperResPipeline.h  Util.h  stdafx.h
imaging/alignment/: block_align.cpp  block_align.h  block_aligner.h  hier_align.cpp  hier_align.h  lucas_kanade.cpp  lucas_kanade.h  robustness_mask.h
imaging/rendering/: kernel_reconstruction.h
imaging/tests/: AlignNaiveTest.cpp  HierarchicalAlignmentTest.cpp  main.cpp  test_util.cpp
imaging/tests/alignment/: test_block_align.cpp  test_hier_align.cpp  test_lucas_kanade.cpp
super_res/: main.cpp
